feat(routes): add and integrate Error500 page with rendering

--- a/src/features/auth/ui/RegisterPage/RegisterPage.scss
+++ b/src/features/auth/ui/RegisterPage/RegisterPage.scss
@@ -23,6 +23,17 @@
       color: #EE683E;
       margin-bottom: 24px;
     }
+    &__notification {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 10;
+    }
   }
 }
 .register-form {
