feat(HomePage): add conditional rendering for profile and guest users

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,6 +1,8 @@
 @use '../../shared/styles/variables'  as *;
 .homepage-wrapper {
   width: 1440px;
+  min-height: 100vh;
+  background: var(--primary-bg);
 }
 .homepage {
   display: flex;
