--- a/src/features/posts/ui/Post/Post.scss
+++ b/src/features/posts/ui/Post/Post.scss
@@ -56,7 +56,6 @@
     font-size: $body-regular-16;
     font-weight: 400;
     line-height: 22px;
-    margin-bottom: 10px;
     color: var(--post-content-color);
     word-wrap: break-word;
     overflow-wrap: break-word;
@@ -110,7 +109,7 @@
       -webkit-box-orient: vertical;
       overflow: hidden;
       text-overflow: ellipsis;
-      line-clamp: 2;
+      -line-clamp: 2;
       -webkit-line-clamp: 2;
       line-height: 1.5;
       max-height: calc(1.5em * 2);
@@ -152,7 +151,7 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
-        line-clamp: 3;
+        -line-clamp: 3;
         -webkit-line-clamp: 3;
         line-height: 1.5;
         max-height: calc(1.5em * 3);
@@ -207,7 +206,6 @@
 
     &__content {
       font-size: 16px;
-      margin-bottom: 10px;
     }
 
     &__image {
