feat(post): add request and display full post functionality

--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -70,6 +70,16 @@ $grey-darker: #BEB9B4;
   --body-login-bg: #F2F2F2;
   --input-text-color: #212121;
   --error-description-color: #303030;
+  --share-btn-svg-hover: #FD825D;
+  --share-btn-svg-active: #EE683E;
+  --share-popup-bg: #FCFCFC;
+  --share-title-color: #EE683E;
+  --share-description-color: #212121;
+  --share-link-bg: #F6F6F6;
+  --share-link-border: none;
+  --share-link-color: #212121;
+
+
 
 }
 
@@ -123,6 +133,16 @@ $grey-darker: #BEB9B4;
   --body-login-bg: #212121;
   --input-text-color: #F6F6F6;
   --error-description-color: #BDBDBD;
+  --share-btn-svg-hover: #EE683E;
+  --share-btn-svg-active: #CD4E27;
+  --share-popup-bg: #303030;
+  --share-title-color: #CD4E27;
+  --share-description-color: #F6F6F6;
+  --share-link-bg: #303030;
+  --share-link-border: 1px solid #686868;
+  --share-link-color: #F6F6F6;
+
+
 
 }
 
