--- a/src/features/posts/ui/Post/Post.scss
+++ b/src/features/posts/ui/Post/Post.scss
@@ -8,6 +8,25 @@
   color: black;
   margin-bottom: 20px;
 
+  position: relative;
+  min-height: 475px;
+  height: auto;
+
+  &__close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    z-index: 10;
+    & img {
+      width: 24px;
+      height: 24px;
+    }
+  }
+
   &__header {
     display: flex;
     align-items: center;
@@ -41,6 +60,9 @@
     line-height: 21px;
     margin: 10px 0;
     color: var(--post-author-color);
+    overflow: hidden;
+    text-overflow: ellipsis;
+
   }
 
   &__date {
@@ -60,9 +82,10 @@
     word-wrap: break-word;
     overflow-wrap: break-word;
     white-space: normal;
+    height: 67px;
   }
 
-  &__read-more {
+  &__read-more_min {
     font-family: 'Gilroy', sans-serif;
     font-size: $body-regular-16;
     font-weight: 400;
@@ -71,6 +94,9 @@
     text-decoration: none;
     white-space: normal;
     word-break: break-word;
+    background: none;
+    border: none;
+    cursor: pointer;
 
     &:hover {
       color: #CD4E27;
@@ -81,20 +107,31 @@
     width: 100%;
     border-radius: $border-radius;
     margin: 10px 0;
+    border: 1px solid rgba(0, 0, 0, 0.5);
   }
 
   &__actions {
     display: flex;
     flex-direction: row;
     gap: 24px;
-    margin-top: 14px;
     color: var(--post-actions-color);
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    z-index: 10;
+
   }
 }
 @media (max-width: 823px) {
   .post {
-    padding: 16px;
+    padding: 16px 16px 45px 16px;
     margin-bottom: 10px;
+    min-height: 475px;
+    height: auto;
     &__header {
       margin-bottom: 27px;
     }
@@ -116,13 +153,19 @@
     }
 
   }
-  .post__read-more {
-    text-align: left;
-    display: block;
+  .post__read-more_max {
+    display: none;
   }
   .post__image {
     min-height: 212px;
     max-height: 30vh;
+    width: 100%;
+    border-radius: 18px;
+    margin: 10px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
   }
 }
 
@@ -131,7 +174,7 @@
     background: var(--select-btn-color);
     border-radius: 20px;
     padding: 22px 41px;
-    height: 626px;
+    min-height: 626px;
     display: flex;
     flex-direction: column;
 
@@ -159,8 +202,11 @@
       }
 
     }
-
-    &__read-more {
+    &__read-more_min {
+      display: none;
+    }
+    &__read-more_max {
+      cursor: pointer;
       font-size: $body-regular-16;
       font-weight: 400;
       line-height: 22px;
@@ -170,17 +216,21 @@
       text-decoration-skip-ink: none;
       text-decoration: none;
       margin-left: 5px;
-      white-space: nowrap;
+      white-space: normal; /* Позволяет переносу текста */
       display: inline;
-
+      color: #EE683E;
+      word-break: break-word;
+      background: none;
+      border: none;
     }
     &__actions {
       display: flex;
       flex-direction: row;
       gap: 24px;
-      margin-top: 14px;
-      margin-bottom: 7px;
       color: var(--post-actions-color);
+      margin-top: 16px;
+      left: 45px;
+      bottom: 20px;
     }
     &__header {
       display: flex;
@@ -212,10 +262,105 @@
       width: 100%;
       border-radius: 18px;
       margin: 10px 0;
-      min-height: 346px;
+      max-height: 346px;
       display: flex;
       justify-content: center;
       align-items: center;
+    }
+  }
+}
+
+
+.post {
+  &--expanded {
+    position: fixed;
+    top: 53%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 91%;
+    height: 80%;
+    z-index: 1000;
+    animation: expand 0.3s ease-in-out;
+    min-height: 739px;
+  }
+
+  &--collapsed {
+    animation: collapse 0.3s ease-in-out;
+  }
+}
+
+@keyframes expand {
+  from {
+    transform: translate(-50%, -50%) scale(0.5);
+    opacity: 0;
+  }
+  to {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes collapse {
+  from {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+  to {
+    transform: translate(-50%, -50%) scale(0.5);
+    opacity: 0;
+  }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.90);
+  z-index: 999;
+  display: none;
+
+  &--visible {
+    display: block;
+  }
+}
+
+body.no-scroll {
+  overflow: hidden !important;
+  position: fixed;
+  width: 100%;
+
+}
+.post__content__description {
+  display: block;
+
+  &.post__content__description_full {
+    white-space: normal;
+    max-height: 330px;
+    overflow: auto;
+  }
+}
+
+@media (min-width: 825px) {
+  .post {
+    &__image {
+      min-height: 346px;
+    }
+    &--expanded {
+      position: fixed;
+      top: 53%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(1);
+      width: 743px;
+      height: 648px;
+      z-index: 1000;
+      animation: expand 0.3s ease-in-out;
+      min-height: 739px;
+    }
+
+    &--collapsed {
+      animation: collapse 0.3s ease-in-out;
     }
   }
 }
