--- a/src/shared/ui/Notification/Notification.scss
+++ b/src/shared/ui/Notification/Notification.scss
@@ -8,7 +8,7 @@
   height: 50px;
   padding: 12px 16px;
   border-radius: 8px;
-  background-color: #FCFCFC;
+  background-color: var(--share-popup-bg);
   box-shadow: 0 12px 40px 0 rgba(140, 140, 140, 0.15);
   border: none;
   box-sizing: border-box;
@@ -24,7 +24,7 @@
     font-weight: 400;
     line-height: 16px;
     letter-spacing: 0.01em;
-    color: #212121;
+    color:  var(--share-link-color);
     flex: 1;
     margin: 0 12px;
   }
