--- a/src/features/posts/ui/Post/Post.scss
+++ b/src/features/posts/ui/Post/Post.scss
@@ -282,6 +282,8 @@
     z-index: 1000;
     animation: expand 0.3s ease-in-out;
     min-height: 739px;
+    background: var(--select-btn-color);
+    border-radius: 16px;
   }
 
   &--collapsed {
@@ -316,7 +318,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.90);
   z-index: 999;
   display: none;
@@ -357,6 +359,8 @@ body.no-scroll {
       z-index: 1000;
       animation: expand 0.3s ease-in-out;
       min-height: 739px;
+      background: var(--select-btn-color);
+
     }
 
     &--collapsed {
