--- a/src/shared/ui/Button/Button.scss
+++ b/src/shared/ui/Button/Button.scss
@@ -86,8 +86,8 @@
   }
 
   &--small {
-    width: 100%;
-    max-width: 164px;
+    max-width: 100%;
+    width: 164px;
     height: 44px;
     padding: 0 16px;
   }
