--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -51,7 +51,7 @@
   &__content {
     max-width: 743px;
     width: 100%;
-    margin-top: 20px;
+    margin-top: 64px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -65,6 +65,8 @@
     &__content {
       padding: 0 10px;
       width: 99vw;
+      position: relative;
+      top: 20px;
     }
 
     &__nav {
@@ -117,6 +119,10 @@
   }
 }
 @media (max-width: 824px) {
+  .homepage {
+    &__content {
+      gap: 25px;
+    }
   .select-dropdown__button {
     background: var(--select-btn-bg);
 
@@ -129,7 +135,7 @@
 @media (min-width: 825px) {
   .homepage {
     &__content {
-      gap: 25px;
+      margin-top: 84px;
     }
     &__nav {
       background: var(--homepage-header-bg);
@@ -160,6 +166,7 @@
       }
     }
   }
+}
 }
 
 
