--- a/src/widgets/Header/Header.scss
+++ b/src/widgets/Header/Header.scss
@@ -8,7 +8,6 @@
   align-items: center;
   height: 64px;
   background: var(--select-btn-color);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
   position: relative;
 
   &__svg {
@@ -182,7 +181,6 @@
     align-items: center;
     height: 64px;
     background: var(--select-btn-color);
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
     &__svg {
       display: none;
     }
@@ -304,7 +302,7 @@
   max-width: 1440px;
   z-index: 10;
   background: var(--select-btn-color);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+  //box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
   padding: 0 24px;
 }
 
