--- a/src/widgets/HomeHeader/HomeHeader.scss
+++ b/src/widgets/HomeHeader/HomeHeader.scss
@@ -4,7 +4,7 @@
     position: fixed;
     top: 64px;
     left: 50%;
-    z-index: 50;
+    z-index: 1;
     transform: translateX(-50%);
     width: 110%;
     max-width: 743px;
@@ -35,13 +35,15 @@
 @media (max-width: 825px) {
   .homepage {
     &__header {
-      top: 108px;
+      top: 118px;
       width: 101vw;
       margin: 0 auto;
+      height: 86px;
     }
     &__nav {
       background: var(--homepage-header-bg);
       width: 102%;
+      height: 86px;
     }
   }
 }
@@ -65,24 +67,27 @@
   }
 }
 
+
 @media (min-width: 825px) {
   .homepage {
+    &__header {
+      width: 100%;
+      max-width: 745px;
+      background: var(--homepage-header-bg);
+      padding: 10px;
+      box-shadow: none;
+      z-index: 0;
+    }
     &__nav {
       background: var(--homepage-header-bg);
       justify-content: left;
-
+      max-width: 743px;
       &__loadingSelectDropdown {
         margin-top: 20px;
         margin-left: -320px;
       }
     }
-    &__header {
-      width: 100%;
-      max-width: 743px;
-      background: var(--homepage-header-bg);
-      padding: 10px;
-      box-shadow: none;
-    }
+
   }
 }
 .hidden {
