--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -79,6 +79,8 @@ $grey-darker: #BEB9B4;
   --share-link-border: none;
   --share-link-color: #212121;
   --burger-color: #686868;
+  --box-shadow-datepicker: 0 12px 40px 0 #8C8C8C26;
+  --datepicker-day-color: #BDBDBD;
 
 
 
@@ -143,6 +145,8 @@ $grey-darker: #BEB9B4;
   --share-link-border: 1px solid #686868;
   --share-link-color: #F6F6F6;
   --burger-color: #ffffff;
+  --box-shadow-datepicker: 4px 12px 40px 0px #00000040;
+  --datepicker-day-color: #686868;
 
 
 
