--- a/src/shared/ui/Button/Button.scss
+++ b/src/shared/ui/Button/Button.scss
@@ -33,22 +33,22 @@
   }
 
   &--secondary {
-    background-color: #FCFCFC;
+    background-color: var(--btn-secondary-bg);
     color: #EE683E;
-    border: 1px solid #EE683E;
+    border: 1px solid var(--radio-checked-bg);
     width: 100%;
     max-width: 163px;
     height: 44px;
     padding: 0 16px;
 
     &:hover {
-      background-color: #FCFCFC;
-      color: #FD825D;
-      border: 1px solid #FD825D;
+      background-color: var(--btn-secondary-bg);
+      color: var(--radio-checked-bg-hover);
+      border: 1px solid var(--btn-hover-bg);
     }
 
     &:focus {
-      background-color: #FCFCFC;
+      background-color: var(--btn-secondary-bg);
       color:  #EE683E;
       border: 1px solid #EE683E;
     }
