--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -87,6 +87,7 @@ $grey-darker: #BEB9B4;
   --btn-secondary-bg: #FCFCFC;
   --disabled-btn-color: #F2F2F2;
   --disabled-btn-bg: #BEB9B4;
+  --mobile-action-bar-bg: #FCFCFC;
 
 }
 
@@ -157,6 +158,7 @@ $grey-darker: #BEB9B4;
   --btn-secondary-bg: #303030;
   --disabled-btn-color: #FCFCFC;
   --disabled-btn-bg: #686868;
+  --mobile-action-bar-bg: #171717;
 
 }
 
