--- a/src/shared/ui/MobileActionBar/MobileActionBar.scss
+++ b/src/shared/ui/MobileActionBar/MobileActionBar.scss
@@ -1,11 +1,11 @@
 .mobile-action-bar {
   position: fixed;
   bottom: 0;
-  left: 0;
-  //left: 50%;
-  //transform: translateX(-50%);
+  //left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   width: 100%;
-  //max-width: 375px;
+  max-width: 375px;
   height: 50px;
   background: var(--mobile-action-bar-bg);
   display: flex;
