--- a/src/features/navigation/ui/MobileMenu/MobileMenu.scss
+++ b/src/features/navigation/ui/MobileMenu/MobileMenu.scss
@@ -97,6 +97,7 @@
   padding: 16px 0 0 16px;
   & img {
     width: 40px;
+    border-radius: 50%;
   }
   &_h2 {
     font-family: 'Gilroy', sans-serif;
