--- a/src/widgets/Header/ui/ DropdownProfile/DropdownProfile.scss
+++ b/src/widgets/Header/ui/ DropdownProfile/DropdownProfile.scss
@@ -16,6 +16,11 @@
     border-radius: 50%;
     margin-left: -2px;
     margin-bottom: 7px;
+    &-img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+    }
   }
 
   &__username {
