--- a/src/shared/ui/AvatarUpload/AvatarUpload.scss
+++ b/src/shared/ui/AvatarUpload/AvatarUpload.scss
@@ -68,7 +68,7 @@
   min-height: 162px;
   padding: 0;
   border-radius: 12px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: left;
   position: relative;
   animation: fadeIn 0.2s ease-in-out;
