--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -96,6 +96,8 @@ $grey-darker: #BEB9B4;
   --add-posts__input-color: #212121;
   --add-posts__photo-label-border:  #BEB9B4;
   --add-posts__input-border: none;
+  --add-posts__container-big-bg: #FCFCFC;
+
 
 }
 
@@ -175,6 +177,7 @@ $grey-darker: #BEB9B4;
   --add-posts__input-color: #F6F6F6;
   --add-posts__photo-label-border: #686868;
   --add-posts__input-border: 1px solid #686868;
+  --add-posts__container-big-bg: #303030;
 }
 
 $border-radius: 8px;
