--- a/src/pages/ui/FavoritesPage/FavoritesPage.scss
+++ b/src/pages/ui/FavoritesPage/FavoritesPage.scss
@@ -14,7 +14,7 @@
   box-sizing: border-box;
   width: 100%;
   max-width: 1440px;
-  margin: 20px auto;
+  margin: 20px auto 0 auto;
   overflow: hidden;
   background: var(--primary-bg);
 }
